--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "author": "sf",
   "license": "MIT",
+  "engines": {
+    "node": "9.3.0"
+  },
   "scripts": {
     "serve": "live-server public",
     "build:dev": "webpack",
