--- a/package.json
+++ b/package.json
@@ -46,9 +46,7 @@
     "style-loader": "^0.19.1",
     "uuid": "^3.1.0",
     "validator": "^9.2.0",
-    "webpack-dev-server": "^2.9.7"
-  },
-  "devDependencies": {
+    "webpack-dev-server": "^2.9.7",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "webpack": "^3.10.0"
