--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "sf",
   "license": "MIT",
   "engines": {
-    "node": "8.9.3"
+    "node": "9.3.0"
   },
   "scripts": {
     "build:dev": "webpack",
@@ -21,12 +21,15 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
+    "numeral": "^2.0.6",
     "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-addons-shallow-compare": "^15.6.2",
@@ -40,8 +43,6 @@
     "style-loader": "^0.19.1",
     "uuid": "^3.1.0",
     "validator": "^9.2.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "webpack": "^3.10.0"
   },
   "devDependencies": {
